# Mobile-Document-Scanner-CppBind-example

./: cppbind.yaml
apps/ios/DocumentScanner/DocumentScanner.xcodeproj/: project.pbxproj
apps/kotlin/: main.kt
document_scanner/api/android/docscanner/src/main/java/cppbind/: exceptionUtils.kt  utils.kt
document_scanner/api/android/docscanner/src/main/java/cv/: imgcodecs.kt  mat.kt  types.kt
document_scanner/api/android/docscanner/src/main/java/doc_scanner/: document_scanner_cv.kt
document_scanner/api/ios/DocumentScannerFramework/DocumentScannerFramework.xcodeproj/: project.pbxproj
document_scanner/api/ios/DocumentScannerFramework/DocumentScannerFramework/Cpp/cppbind/exceptions/: c_swift_std_exc_classes.cpp  c_swift_std_exc_classes.h
document_scanner/api/ios/DocumentScannerFramework/DocumentScannerFramework/Cpp/cv/: c_swift_imgcodecs.cpp  c_swift_imgcodecs.h  c_swift_mat.cpp  c_swift_mat.h  c_swift_types.cpp  c_swift_types.h
document_scanner/api/ios/DocumentScannerFramework/DocumentScannerFramework/Cpp/doc_scanner/: c_swift_document_scanner_cv.cpp  c_swift_document_scanner_cv.h
document_scanner/api/ios/DocumentScannerFramework/DocumentScannerFramework/swift/cppbind/exceptions/: std_exc_classes.swift
document_scanner/api/ios/DocumentScannerFramework/DocumentScannerFramework/swift/cv/: imgcodecs.swift  mat.swift  types.swift
document_scanner/api/ios/DocumentScannerFramework/DocumentScannerFramework/swift/doc_scanner/: document_scanner_cv.swift
document_scanner/api/python/: CMakeLists.txt
(+7 files in other folders)
